Cleaned links added. Added donate button

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -62,7 +62,7 @@
 
     <div class="footer">
       <div class="links">
-        <a href="https://github.com/yourusername/netflix-hotstar-ratings" target="_blank">GitHub</a>
+        <a href="https://www.paypal.com/paypalme/bharade" target="_blank">Donate</a>
       </div>
       <p class="version">v1.0.0</p>
     </div>
